# miniflux-mail-digest

./: .gitignore  README.md  miniflux_mail_digest.py  pyproject.toml  requirements.txt
miniflux_mail_digest/: main.py  style.css
miniflux_mail_digest/templates/: entry.html  message.html
scripts/: freeze-requirements  make-venv
templates/: entry.html  message.html
