[tool.poetry]
name = "miniflux-mail-digest"
version = "0.1.0"
description = ""
authors = ["Maor Kadosh <git@avocadosh.xyz>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
miniflux = "^0.0.15"
beautifulsoup4 = "^4.12.2"
python-dotenv = "^1.0.0"


[tool.poetry.group.dev.dependencies]
types-beautifulsoup4 = "^4.12.0.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100
